--- a/Servers.conf
+++ b/Servers.conf
@@ -1,15 +1,13 @@
 [SERVER]
-United States = shadowsocks, 34.80.159.225, 233, aes-256-gcm, "spring2019", upstream-proxy=false, upstream-proxy-auth=false
-Japan = shadowsocks, 3.112.45.228, 233, aes-256-gcm, "spring2019", upstream-proxy=false, upstream-proxy-auth=false
-PLUS1 = shadowsocks, s1.mpdf.in, 13281, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-PLUS2 = shadowsocks, s2.mpdf.in, 13281, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-PLUS3 = shadowsocks, s3.mpdf.in, 13281, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-PLUS4 = shadowsocks, s4.mpdf.in, 13281, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-PLUS5 = shadowsocks, s5.mpdf.in, 13281, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-PLUS6 = shadowsocks, s6.mpdf.in, 13281, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-MPDF1 = shadowsocks, s1.mpdf.in, 28978, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-MPDF2 = shadowsocks, s2.mpdf.in, 28978, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-MPDF3 = shadowsocks, s3.mpdf.in, 28978, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-MPDF4 = shadowsocks, s4.mpdf.in, 28978, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-MPDF5 = shadowsocks, s5.mpdf.in, 28978, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
-MPDF6 = shadowsocks, s6.mpdf.in, 28978, aes-256-gcm, "MrGlasses", upstream-proxy=false, upstream-proxy-auth=false
+PLUS1 = shadowsocks, s1.mpdf.in, 13281, aes-256-gcm, "MrGlasses", group=PLUS, upstream-proxy=false, upstream-proxy-auth=false
+PLUS2 = shadowsocks, s2.mpdf.in, 13281, aes-256-gcm, "MrGlasses", group=PLUS, upstream-proxy=false, upstream-proxy-auth=false
+PLUS3 = shadowsocks, s3.mpdf.in, 13281, aes-256-gcm, "MrGlasses", group=PLUS, upstream-proxy=false, upstream-proxy-auth=false
+PLUS4 = shadowsocks, s4.mpdf.in, 13281, aes-256-gcm, "MrGlasses", group=PLUS, upstream-proxy=false, upstream-proxy-auth=false
+PLUS5 = shadowsocks, s5.mpdf.in, 13281, aes-256-gcm, "MrGlasses", group=PLUS, upstream-proxy=false, upstream-proxy-auth=false
+PLUS6 = shadowsocks, s6.mpdf.in, 13281, aes-256-gcm, "MrGlasses", group=PLUS, upstream-proxy=false, upstream-proxy-auth=false
+MPDF1 = shadowsocks, s1.mpdf.in, 28978, aes-256-gcm, "MrGlasses", group=MPDF, upstream-proxy=false, upstream-proxy-auth=false
+MPDF2 = shadowsocks, s2.mpdf.in, 28978, aes-256-gcm, "MrGlasses", group=MPDF, upstream-proxy=false, upstream-proxy-auth=false
+MPDF3 = shadowsocks, s3.mpdf.in, 28978, aes-256-gcm, "MrGlasses", group=MPDF, upstream-proxy=false, upstream-proxy-auth=false
+MPDF4 = shadowsocks, s4.mpdf.in, 28978, aes-256-gcm, "MrGlasses", group=MPDF, upstream-proxy=false, upstream-proxy-auth=false
+MPDF5 = shadowsocks, s5.mpdf.in, 28978, aes-256-gcm, "MrGlasses", group=MPDF, upstream-proxy=false, upstream-proxy-auth=false
+MPDF6 = shadowsocks, s6.mpdf.in, 28978, aes-256-gcm, "MrGlasses", group=MPDF, upstream-proxy=false, upstream-proxy-auth=false
