--- a/Midea.config
+++ b/Midea.config
@@ -10,3 +10,4 @@ IP-CIDR,91.108.4.0/22,MPDF1,no-resolve
 IP-CIDR,91.108.56.0/22,MPDF1,no-resolve
 IP-CIDR,91.108.56.0/23,MPDF1,no-resolve
 HOST-KEYWORD,telegram,MPDF1,resolve-on-proxy
+USER-AGENT,TikTok*,PROXY
