--- a/Midea.config
+++ b/Midea.config
@@ -1,13 +1,13 @@
 USER-AGENT,*youtube*,PROXY
 HOST-SUFFIX,youtu.be,PROXY,resolve-on-proxy
 HOST-KEYWORD,youtube,PROXY,resolve-on-proxy
-USER-AGENT,*Telegram*,MPDF1
-HOST-SUFFIX,telegra.ph,MPDF1
-IP-CIDR,149.154.164.0/22,MPDF1,no-resolve
-IP-CIDR,149.154.168.0/22,MPDF1,no-resolve
-IP-CIDR,149.154.172.0/22,MPDF1,no-resolve
-IP-CIDR,91.108.4.0/22,MPDF1,no-resolve
-IP-CIDR,91.108.56.0/22,MPDF1,no-resolve
-IP-CIDR,91.108.56.0/23,MPDF1,no-resolve
-HOST-KEYWORD,telegram,MPDF1,resolve-on-proxy
-USER-AGENT,TikTok*,PROXY
+USER-AGENT,*Telegram*,选择Telegram的策略
+HOST-SUFFIX,telegra.ph,选择Telegram的策略
+IP-CIDR,149.154.164.0/22,选择Telegram的策略,no-resolve
+IP-CIDR,149.154.168.0/22,选择Telegram的策略,no-resolve
+IP-CIDR,149.154.172.0/22,选择Telegram的策略,no-resolve
+IP-CIDR,91.108.4.0/22,选择Telegram的策略,no-resolve
+IP-CIDR,91.108.56.0/22,选择Telegram的策略,no-resolve
+IP-CIDR,91.108.56.0/23,选择Telegram的策略,no-resolve
+HOST-KEYWORD,telegram,选择Telegram的策略,resolve-on-proxy
+USER-AGENT,TikTok*,选择TikTok的策略
