--- a/Midea.config
+++ b/Midea.config
@@ -11,3 +11,5 @@ IP-CIDR,91.108.56.0/22,选择Telegram的策略,no-resolve
 IP-CIDR,91.108.56.0/23,选择Telegram的策略,no-resolve
 HOST-KEYWORD,telegram,选择Telegram的策略,resolve-on-proxy
 USER-AGENT,TikTok*,选择TikTok的策略
+HOST-SUFFIX,tiktokv.com,选择TikTok的策略,resolve-on-proxy
+HOST-SUFFIX,musical.ly,选择TikTok的策略,resolve-on-proxy
