--- a/Midea.config
+++ b/Midea.config
@@ -17,3 +17,6 @@ USER-AGENT,Instagram*,PROXY
 HOST-KEYWORD,instagram,PROXY,resolve-on-proxy
 HOST-KEYWORD,twitter,PROXY,resolve-on-proxy
 HOST-KEYWORD,twimg,PROXY,resolve-on-proxy
+HOST-SUFFIX,twimg.co,PROXY,resolve-on-proxy
+HOST-SUFFIX,twitch.tv,PROXY,resolve-on-proxy
+HOST-SUFFIX,twitpic.com,PROXY,resolve-on-proxy
