--- a/Midea.config
+++ b/Midea.config
@@ -15,7 +15,7 @@ HOST-SUFFIX,tiktokv.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,musical.ly,PROXY,resolve-on-proxy
 USER-AGENT,Instagram*,PROXY
 HOST-KEYWORD,instagram,PROXY,resolve-on-proxy
-HOST-KEYWORD,twitter,PROXY,resolve-on-proxy
+HOST-KEYWORD,twitter,MPDF2,resolve-on-proxy
 HOST-KEYWORD,twimg,PROXY,resolve-on-proxy
 HOST-SUFFIX,twimg.co,PROXY,resolve-on-proxy
 HOST-SUFFIX,twitch.tv,PROXY,resolve-on-proxy
