--- a/UnblockNeteaseMusic.conf
+++ b/UnblockNeteaseMusic.conf
@@ -1,4 +1,4 @@
 [TCP]
-HOST-SUFFIX,music.126.net,网易云
-HOST-SUFFIX,music.163.com,网易云
-USER-AGENT,NeteaseMusic*,网易云
+HOST-SUFFIX,music.126.net,选择网易云
+HOST-SUFFIX,music.163.com,选择网易云
+USER-AGENT,NeteaseMusic*,选择网易云
