--- a/BlockiOSServices.conf
+++ b/BlockiOSServices.conf
@@ -1,4 +1,4 @@
-//iOS Update
+# Block iOS Update
 HOST-SUFFIX,gdmf.apple.com,REJECT
 HOST-SUFFIX,xp.apple.com,REJECT
 HOST-SUFFIX,swscan.apple.com,REJECT
@@ -8,6 +8,4 @@ HOST-SUFFIX,appldnld.apple.com,REJECT
 HOST-SUFFIX,ocsp.apple.com,REJECT
 HOST-SUFFIX,iphonesubmissions.apple.com,REJECT
 HOST-SUFFIX,radarsubmissions.apple.com,REJECT
-
-//Apple Music
 USER-AGENT,Music*,REJECT
