--- a/Quantumult X/BlockiOSServices.conf
+++ b/Quantumult X/BlockiOSServices.conf
@@ -8,3 +8,6 @@ HOST-SUFFIX,appldnld.apple.com,REJECT
 HOST-SUFFIX,ocsp.apple.com,REJECT
 HOST-SUFFIX,iphonesubmissions.apple.com,REJECT
 HOST-SUFFIX,radarsubmissions.apple.com,REJECT
+HOST-SUFFIX,gg.apple.com,REJECT
+HOST-SUFFIX,updates-http.cdn-apple.com,REJECT
+HOST-SUFFIX,updates.cdn-apple.com,REJECT
