--- a/Quantumult X/BlockiOSServices.conf
+++ b/Quantumult X/BlockiOSServices.conf
@@ -1,13 +1,15 @@
 # Block iOS Update
-HOST-KEYWORD,gdmf.apple.com,REJECT
-HOST-KEYWORD,xp.apple.com,REJECT
-HOST-KEYWORD,swscan.apple.com,REJECT
-HOST-KEYWORD,mesu.apple.com,REJECT
-HOST-KEYWORD,ns.itunes.apple.com,REJECT
-HOST-KEYWORD,appldnld.apple.com,REJECT
-HOST-KEYWORD,ocsp.apple.com,REJECT
-HOST-KEYWORD,iphonesubmissions.apple.com,REJECT
-HOST-KEYWORD,radarsubmissions.apple.com,REJECT
-HOST-KEYWORD,gg.apple.com,REJECT
-HOST-KEYWORD,updates-http.cdn-apple.com,REJECT
-HOST-KEYWORD,updates.cdn-apple.com,REJECT
+HOST,gdmf.apple.com,REJECT
+HOST,gdmf.apple.com.akadns.net,REJECT
+HOST,xp.apple.com,REJECT
+HOST,swscan.apple.com,REJECT
+HOST,mesu.apple.com,REJECT
+HOST,mesu.apple.com.mwcname.com,REJECT
+HOST,ns.itunes.apple.com,REJECT
+HOST,appldnld.apple.com,REJECT
+HOST,ocsp.apple.com,REJECT
+HOST,iphonesubmissions.apple.com,REJECT
+HOST,radarsubmissions.apple.com,REJECT
+HOST,gg.apple.com,REJECT
+HOST,updates-http.cdn-apple.com,REJECT
+HOST,updates.cdn-apple.com,REJECT
