--- a/BlockiOSServices.conf
+++ b/BlockiOSServices.conf
@@ -1,14 +1,16 @@
 [TCP]	
 //iOS Update
-HOST-SUFFIX,gdmf.apple.com,REJECT
-HOST-SUFFIX,xp.apple.com,REJECT
-HOST-SUFFIX,swscan.apple.com,REJECT
-HOST-SUFFIX,mesu.apple.com,REJECT
-HOST-SUFFIX,ns.itunes.apple.com,REJECT
-HOST-SUFFIX,appldnld.apple.com,REJECT
-HOST-SUFFIX,ocsp.apple.com,REJECT
-HOST-SUFFIX,iphonesubmissions.apple.com,REJECT
-HOST-SUFFIX,radarsubmissions.apple.com,REJECT
-HOST-SUFFIX,gg.apple.com,REJECT
-HOST-SUFFIX,updates-http.cdn-apple.com,REJECT
-HOST-SUFFIX,updates.cdn-apple.com,REJECT
+HOST,gdmf.apple.com,REJECT
+HOST,gdmf.apple.com.akadns.net,REJECT
+HOST,xp.apple.com,REJECT
+HOST,swscan.apple.com,REJECT
+HOST,mesu.apple.com,REJECT
+HOST,mesu.apple.com.mwcname.com,REJECT
+HOST,ns.itunes.apple.com,REJECT
+HOST,appldnld.apple.com,REJECT
+HOST,ocsp.apple.com,REJECT
+HOST,iphonesubmissions.apple.com,REJECT
+HOST,radarsubmissions.apple.com,REJECT
+HOST,gg.apple.com,REJECT
+HOST,updates-http.cdn-apple.com,REJECT
+HOST,updates.cdn-apple.com,REJECT
