--- a/Quantumult X/BlockiOSServices.conf
+++ b/Quantumult X/BlockiOSServices.conf
@@ -1,10 +1,10 @@
 # Block iOS Update
 HOST,gdmf.apple.com,REJECT
-HOST,gdmf.apple.com.akadns.net,REJECT
+#HOST,gdmf.apple.com.akadns.net,REJECT
 HOST,xp.apple.com,REJECT
 HOST,swscan.apple.com,REJECT
 HOST,mesu.apple.com,REJECT
-HOST,mesu.apple.com.mwcname.com,REJECT
+#HOST,mesu.apple.com.mwcname.com,REJECT
 HOST,ns.itunes.apple.com,REJECT
 HOST,appldnld.apple.com,REJECT
 HOST,ocsp.apple.com,REJECT
