--- a/QuantumultX/UnblockNeteaseMusic.conf
+++ b/QuantumultX/UnblockNeteaseMusic.conf
@@ -1,5 +1,5 @@
 http=taron.top:100, fast-open=false, udp-relay=false, tag=解锁网易云音乐
-shadowsocks=blockmusic.poetyin.me:30003, method=aes-128-gcm, password=desperadoj.com_free_proxy_x80j, fast-open=false, udp-relay=false, tag=解锁网易云音乐1 | Alibaba Cloud
-http=blockmusic2.poetyin.me:19951, fast-open=false, udp-relay=false, tag=解锁网易云音乐2 | Tencent Cloud
-http=3music.poetyin.me:100, fast-open=false, udp-relay=false, tag=解锁网易云音乐3 | Alibaba Cloud
-http=block4music.poetyin.me:39000, fast-open=false, udp-relay=false, tag=解锁网易云音乐4 | Alibaba Cloud
+shadowsocks=blockmusic.poetyin.me:30003, method=aes-128-gcm, password=desperadoj.com_free_proxy_x80j, fast-open=false, udp-relay=false, tag=解锁网易云音乐1
+http=blockmusic2.poetyin.me:19951, fast-open=false, udp-relay=false, tag=解锁网易云音乐2
+http=3music.poetyin.me:100, fast-open=false, udp-relay=false, tag=解锁网易云音乐3
+http=block4music.poetyin.me:39000, fast-open=false, udp-relay=false, tag=解锁网易云音乐4
