--- a/QuantumultX/Filter/BlockiOSServices.conf
+++ b/QuantumultX/Filter/BlockiOSServices.conf
@@ -1,12 +1,16 @@
 # Block iOS Update
 HOST,gdmf.apple.com,REJECT
-;HOST,gdmf.apple.com.akadns.net,REJECT
+HOST,gdmf.apple.com.akadns.net,REJECT
 HOST,xp.apple.com,REJECT
 HOST,swscan.apple.com,REJECT
 HOST,mesu.apple.com,REJECT
-;HOST,mesu.apple.com.mwcname.com,REJECT
+HOST,mesu.apple.com.mwcname.com,REJECT
+HOST,mesu-cdn.apple.com.akadns.net,REJECT
+HOST,mesu-cdn.origin-apple.com.akadns.net,REJECT
+HOST,mesu.g.aaplimg.com,REJECT
 HOST,ns.itunes.apple.com,REJECT
 HOST,appldnld.apple.com,REJECT
+HOST,appldnld.apple.com.akadns.net,REJECT
 HOST,ocsp.apple.com,REJECT
 HOST,iphonesubmissions.apple.com,REJECT
 HOST,radarsubmissions.apple.com,REJECT
