--- a/QuantumultX/Rewrite/FakeVIP.conf
+++ b/QuantumultX/Rewrite/FakeVIP.conf
@@ -1,7 +1,17 @@
-hostname = pan.baidu.com, photos.adobe.io, license.pdfexpert.com, api.interpreter.caiyunai.com, vip1.kuwo.cn, api.flexibits.com, api.psy-1.com, mob2015.kekenet.com, app.flashdown365.com
+hostname = pan.baidu.com, vip1.kuwo.cn, biz.caiyunapp.com, *.my10api.com, photos.adobe.io, license.pdfexpert.com, api.interpreter.caiyunai.com, api.flexibits.com, api.psy-1.com, mob2015.kekenet.com, app.flashdown365.com
 
 #百度云倍速播放(By NobyDa)
 ^https?:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
+
+# 酷我音乐SVIP (By yxiaocai)
+^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
+^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?uid\=\d+ url 302 http://musicpay.kuwo.cn/music.pay?uid=1
+
+# 彩云天气 Vip
+^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/ColorWeather.js
+
+# 91短视频
+^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/91.js
 
 #lightroom(By langkhach270389)
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/Lightroom.js
