--- a/QuantumultX/Filter/Adult.conf
+++ b/QuantumultX/Filter/Adult.conf
@@ -1,5 +1,5 @@
-# > Pornhub
 HOST-SUFFIX,phncdn.com,proxy
 HOST-SUFFIX,phprcdn.com,proxy
 HOST-SUFFIX,pornhub.com,proxy
 HOST-SUFFIX,pornhubpremium.com,proxy
+HOST-SUFFIX,playno1.com,proxy
