--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -1,7 +1,7 @@
 #Cookie获取订阅
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
-hostname = api.m.jd.com, *.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, e.189.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn
+hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, e.189.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn
 
 # 京东签到获取cookie
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
@@ -9,7 +9,7 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 
 # 爱奇艺获取cookie
 #打开App,访问下右下角 `我的
-https?:\/\/.*\.iqiyi\.com\/.*authcookie= url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+^https:\/\/iface\d\.iqiyi\.com\/.+?psp_cki= url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
 # 贴吧签到获取cookie
 #打开App,访问下右下角 `我的
