--- a/QuantumultX/Rewrite/JS.conf
+++ b/QuantumultX/Rewrite/JS.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.m.jd.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, app.bilibili.com, api.bilibili.com, aweme*.snssdk.com, *.amemv.com, *.snssdk.com, greasyfork.org, openuserjs.org, m.client.10010.com, *.baidu.com, *.bdimg.com, www.zhihu.com, oia.zhihu.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.m.jd.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, app.bilibili.com, api.bilibili.com, aweme*.snssdk.com, *.amemv.com, greasyfork.org, openuserjs.org, m.client.10010.com, *.baidu.com, *.bdimg.com, www.zhihu.com, oia.zhihu.com
 
 # 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -35,7 +35,8 @@ https://api.bilibili.com/x/v2/reply/main?access_key url script-response-body htt
 https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20live.js
 
 # 抖音去广告去水印 (By Choler)
-^https://aweme-eagle(.*)\.snssdk\.com\/aweme/.+/(feed|aweme/post|follow/feed)/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
+^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
+^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
 
 # 哔哩哔哩番剧开启1080P+
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilifj.js
