--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -9,7 +9,7 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 
 # 爱奇艺获取cookie
 #打开App,访问下右下角 `我的
-^https:\/\/iface\d\.iqiyi\.com\/.+?psp_cki= url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+^https?:\/\/iface\d\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 
 # 贴吧签到获取cookie
 #打开App,访问下右下角 `我的
