--- a/QuantumultX/Rewrite/JS.conf
+++ b/QuantumultX/Rewrite/JS.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.m.jd.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, app.bilibili.com, api.bilibili.com, *.amemv.com, greasyfork.org, openuserjs.org, m.client.10010.com, *.baidu.com, *.bdimg.com, www.zhihu.com, oia.zhihu.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, api.m.jd.com, trade-acs.m.taobao.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, app.bilibili.com, api.bilibili.com, *.amemv.com, greasyfork.org, openuserjs.org, m.client.10010.com, *.baidu.com, *.bdimg.com, www.zhihu.com, oia.zhihu.com, www.iqshw.com
 
 # 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -70,3 +70,6 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 
 # 知乎专栏底部推荐阅读文章直接打开（屏蔽跳转应用商店）
 ^https://oia\.zhihu\.com url 307 https://zhuanlan.zhihu.com
+
+# 爱Q生活网跳转到移动版
+^https?:\/\/(www.)?iqshw\.com\/ url 302 https://wap.iqshw.com/
