--- a/QuantumultX/MrGlasses.conf
+++ b/QuantumultX/MrGlasses.conf
@@ -460,7 +460,8 @@ host, act.vip.iqiyi.com, direct
 host-suffix, amazonaws.com, direct
 host, testflight.apple.com, 苹果服务
 host-suffix, xiaoxiaobujidao.org, proxy
-host-suffix, playno1.com, 成人网站
+host-suffix, feed43.com, 国外网站
+host-suffix, redgifs.com, 国外网站
 
 #迅雷版权问题
 host, hub5idx.v6.shub.sandai.net, reject
