使用 jsDelivr加速项目文件
使用 jsDelivr加速Github项目文件，同时保留raw备份

--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -5,41 +5,41 @@ hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wa
 
 # 京东签到获取cookie
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://cdn.jsdelivr.net/gh/NobyDa/Script/JD-DailyBonus/JD_DailyBonus.js
 
 # 爱奇艺获取cookie
 #打开App,访问下右下角 `我的
-^https?:\/\/iface\d\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
+^https?:\/\/iface\d\.iqiyi\.com\/ url script-request-header https://cdn.jsdelivr.net/gh/NobyDa/Script/iQIYI-DailyBonus/iQIYI.js
 
 # 贴吧签到获取cookie
 #打开App,访问下右下角 `我的
-https?:\/\/(c\.tieba\.baidu\.com|180\.97\.\d+\.\d+)\/c\/s\/login url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/BDTieBa-DailyBonus/TieBa.js
+https?:\/\/(c\.tieba\.baidu\.com|180\.97\.\d+\.\d+)\/c\/s\/login url script-request-header https://cdn.jsdelivr.net/gh/NobyDa/Script/BDTieBa-DailyBonus/TieBa.js
 
 #52破解论坛获取Cookie
 #浏览器访问https://www.52pojie.cn/home.php?mod=space 即可
-https:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
+https:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://cdn.jsdelivr.net/gh/NobyDa/Script/52pojie-DailyBonus/52pojie.js
 
 # 电信营业厅获取cookie
 #需要在BoxJs中填手机号
 #打开 APP 手动签到一次: 访问下右下角 `我` > `签到` (头像下面)
 # 190及以后版本
-^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js
+^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://cdn.jsdelivr.net/gh/chavyleung/scripts/10000/10000.cookie.js
 
 # 中国联通 获取cookie
 #打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
-^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
-^https?:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
-^https?:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
+^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header https://cdn.jsdelivr.net/gh/chavyleung/scripts/10010/10010.cookie.js
+^https?:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header https://cdn.jsdelivr.net/gh/chavyleung/scripts/10010/10010.cookie.js
+^https?:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header https://cdn.jsdelivr.net/gh/chavyleung/scripts/10010/10010.cookie.js
 
 # 中国移动查话费
 # 打开app获取一次，点击话费余额获取一次
 # "我的"-"设置"-"登陆设置"中关闭指纹登陆，打开自动登录，登陆以后关后台重进，才能保证获取到ck
-^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
-^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
+^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://cdn.jsdelivr.net/gh/chavyleung/scripts/10086/10086.fee.cookie.js
+^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://cdn.jsdelivr.net/gh/chavyleung/scripts/10086/10086.fee.cookie.js
 
 # 中国电信套餐 (By @uchvk & @Macsuny)
 #下载安装 天翼账号中心 登录
-^https?:\/\/e\.189\.cn\/store\/user\/package_detail\.do url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/telecomInfinity.js
+^https?:\/\/e\.189\.cn\/store\/user\/package_detail\.do url script-request-header https://cdn.jsdelivr.net/gh/Sunert/Scripts/Task/telecomInfinity.js
 
 # 无忧行 (by @vinewx)
 #获取Cookie说明：「 分为五部分: AccountID | UserID | Mobile | Token | TaskID 」
