--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -1,7 +1,7 @@
 #Cookie获取订阅
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
-hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, e.189.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn
+hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, e.189.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn, m.ximalaya.com
 
 # 京东签到获取cookie
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
@@ -49,5 +49,6 @@ https:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://raw.gi
 https?:\/\/app.*\.jegotrip\.com\.cn\/.*getUser\? url script-response-body https://ooxx.be/js/jegotrip.js
 https?:\/\/task\.jegotrip\.com\.cn\:8080\/app\/tasks\?userid url script-response-body https://ooxx.be/js/jegotrip.js
 
-
-
+# 喜马拉雅极速版Cookie
+#APP登陆账号后，点击右下角'福利'选项,即可获取Cookie.获取成功后，去代理软件的日志里面寻找 ’喜马拉雅极速版cookie‘
+https:\/\/m\.ximalaya\.com\/speed\/task-center\/account\/coin url script-request-header https://raw.githubusercontent.com/lxk0301/scripts/master/backUp/xmly_speed_ccokie.js
