--- a/QuantumultX/Rewrite/FakeVIP.conf
+++ b/QuantumultX/Rewrite/FakeVIP.conf
@@ -1,4 +1,4 @@
-hostname = pan.baidu.com, vip1.kuwo.cn, biz.caiyunapp.com, *.my10api.com, photos.adobe.io, license.pdfexpert.com, api.interpreter.caiyunai.com, api.flexibits.com, api.psy-1.com, mob2015.kekenet.com, app.flashdown365.com, asia-east2-slidebox-ios-prod.cloudfunctions.net, api.qingmang.me
+hostname = pan.baidu.com, vip1.kuwo.cn, biz.caiyunapp.com, *.my10api.com, photos.adobe.io, license.pdfexpert.com, api.interpreter.caiyunai.com, api.flexibits.com, api.psy-1.com, mob2015.kekenet.com, app.flashdown365.com, asia-east2-slidebox-ios-prod.cloudfunctions.net, api.qingmang.me, api.xiaolanben.com
 
 #百度云倍速播放(By NobyDa)
 ^https?:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
@@ -43,5 +43,5 @@ hostname = pan.baidu.com, vip1.kuwo.cn, biz.caiyunapp.com, *.my10api.com, photos
 # Slidebox(By otherbanana)
 https:\/\/asia-east2-slidebox-ios-prod\.cloudfunctions\.net\/api_v1 url script-response-body https://raw.githubusercontent.com/otherbanana/Script/master/QuantumultX/Files-JS/Slidebox.js
 
-#轻芒破解（20200927 By otherbanana）
-^https:\/\/api\.qingmang\.me\/v2\/user\.app\.queryMembership\.* url script-response-body https://raw.githubusercontent.com/otherbanana/Script/master/QuantumultX/Files-JS/qingmang.js
+# 白描
+^https:\/\/baimiao\.uzero\.cn\/api\/v2\.user\/(logout|appLaunchWithUser|loginByWeixin) url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/baimiao.js
