--- a/QuantumultX/Rewrite/Q-Search.conf
+++ b/QuantumultX/Rewrite/Q-Search.conf
@@ -1,4 +1,4 @@
-# From 🐩️哥 (https://raw.githubusercontent.com/Neurogram-R/Surge/master/module/Q-Search.sgmodule)
+# From (https://raw.githubusercontent.com/Neurogram-R/Surge/master/module/Q-Search.sgmodule)
 # Safari 内输入 命令 + 空格 + 关键词 快速指定搜索引擎搜索
 # 注：先进入设置更改 Safari 默认搜索为 DuckDuckGO
 # 注：若非要用 Alook 浏览器使用该脚本，先进行更改：Alook - 设置 - 搜索引擎 - 默认搜索引擎 - DuckDuckGo。其余浏览器同理。
