解决跳转冲突
调整优先级，解决#查询链接直接访问#去除知乎跳转确认#知乎更换 UA#之间的冲突。

--- a/QuantumultX/Rewrite/Redirect.conf
+++ b/QuantumultX/Rewrite/Redirect.conf
@@ -1,9 +1,9 @@
 hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com
 
-# 去掉知乎跳转第三方网站时的中间确认页面
+# 去除知乎跳转确认 需放在#知乎更换 UA#前
 ;^https://link\.zhihu\.com/\?target=(https?)?(%3A|:)?(\/\/|%2F%2F)?(.*?)(&source.*)?$ url 307 http://$4
-^https:\/\/link\.zhihu\.com\/\?target=(https?)(%3A|:)(\/\/|%2F%2F)(.*?)(&source.*)?$ url 307 $1://$4
-^https:\/\/link\.zhihu\.com\/\?target=(www\.)?(.*?)(&source.*)?$ url 307 http://$1$2
+^https:\/\/link\.zhihu\.com.*?target=(https?)(%3A|:)(\/\/|%2F%2F)(.+?)((&|%26|%2526)source.*)?$ url 307 $1://$4
+^https:\/\/link\.zhihu\.com.*?target=(www\.)(.+?)((&|%26|%2526)source.*)?$ url 307 http://www.$2
 
 # 知乎专栏底部推荐阅读文章直接打开（屏蔽跳转应用商店）
 ^https:\/\/oia\.zhihu\.com url 307 https://zhuanlan.zhihu.com
