--- a/QuantumultX/Rewrite/ChangeUA.conf
+++ b/QuantumultX/Rewrite/ChangeUA.conf
@@ -4,7 +4,7 @@ hostname = *.baidu.com, *.bdimg.com, www.zhihu.com, *.sm.cn
 ^https?:\/\/(?!d\.pcs).*\.baidu\.com url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_0_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SearchCraft/3.6.2 (Baidu; P2 14.0.1)$2
 ^https?:\/\/jump2\.bdimg\.com\/(?>f|p) url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_0_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SearchCraft/3.6.2 (Baidu; P2 14.0.1)$2
 
-# 知乎更换 UA
+# 知乎更换 UA 需放在#去除知乎跳转确认#后
 ^https?:\/\/www\.zhihu\.com url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_0_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SearchCraft/3.6.2 (Baidu; P2 14.0.1)$2
 
 # 夸克更换 UA
