改进查询链接直接访问 同步本地改动

--- a/QuantumultX/Rewrite/Q-Search.conf
+++ b/QuantumultX/Rewrite/Q-Search.conf
@@ -7,7 +7,9 @@
 hostname = www.baidu.com, m.baidu.com
 
 # 查询链接直接访问 !!最高优先级!!
-^https:\/\/(www|m)\.baidu.com.*?(wd|word)=(https?)(%3A|:)(\/\/|%2F%2F)(.*) url 307 $4://$7
+;^https:\/\/(www|m)\.baidu.com.*?(wd|word)=(https?)(%3A|:)(\/\/|%2F%2F)(.*) url 307 $3://$6 存在问题
+^https:\/\/(www|m)\.baidu.com.*?(wd|word)=https?:\/\/.+$ url script-echo-response https://raw.githubusercontent.com/MisterGlasses/Quantumult/master/QuantumultX/Script/Q-Search.js
+^https:\/\/(www|m)\.baidu.com.*?(wd|word)=.+\.(com|cn|net)$ url script-echo-response https://raw.githubusercontent.com/MisterGlasses/Quantumult/master/QuantumultX/Script/Q-Search.js
 
 # cf xxx (拆五笔)
 ^https:\/\/(www|m)\.baidu.com.*?(wd|word)=cf(\+|%20)([^&]+).* url 302 http://www.chaiwubi.com/bmcx/?wz=$4
