--- a/QuantumultX/MrGlasses.conf
+++ b/QuantumultX/MrGlasses.conf
@@ -500,13 +500,13 @@ host-suffix, feed43.com, 国外网站
 host-suffix, redgifs.com, 国外网站
 
 # 知乎去广告
-DOMAIN,118.89.204.198,REJECT
-DOMAIN-SUFFIX,118.89.204.198,REJECT
-DOMAIN-KEYWORD,118.89.204.198,REJECT
-IP-CIDR,118.89.204.198/32,REJECT
-USER-AGENT,AVOS*,REJECT
-DOMAIN-SUFFIX,appcloud2.zhihu.com,REJECT
-DOMAIN-SUFFIX,appcloud2.in.zhihu.com,REJECT
+;DOMAIN,118.89.204.198,REJECT
+;DOMAIN-SUFFIX,118.89.204.198,REJECT
+;DOMAIN-KEYWORD,118.89.204.198,REJECT
+;IP-CIDR,118.89.204.198/32,REJECT
+;USER-AGENT,AVOS*,REJECT
+;DOMAIN-SUFFIX,appcloud2.zhihu.com,REJECT
+;DOMAIN-SUFFIX,appcloud2.in.zhihu.com,REJECT
 
 #迅雷版权问题
 host, hub5idx.v6.shub.sandai.net, reject
