--- a/QuantumultX/MrGlasses.conf
+++ b/QuantumultX/MrGlasses.conf
@@ -151,6 +151,9 @@ server=/*.xiaomi.com/119.29.29.29
 #浏览器访问https://www.52pojie.cn/home.php?mod=space 即可
 30 1 7 * * ? https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=52破解, img-url=https://raw.githubusercontent.com/Orz-3/task/master/52pj.png, enabled=true
 
+# 京豆变动通知
+2 9 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_bean_change.js, tag=京豆变动通知, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true
+
 # 贴吧
 #打开App,访问下右下角 `我的
 40 1 7 * * ? https://raw.githubusercontent.com/NobyDa/Script/master/BDTieBa-DailyBonus/TieBa.js, tag=贴吧, img-url=https://raw.githubusercontent.com/Orz-3/task/master/tieba.png, enabled=true
