更新知乎助手链接

--- a/QuantumultX/MrGlasses.conf
+++ b/QuantumultX/MrGlasses.conf
@@ -395,7 +395,7 @@ https://raw.githubusercontent.com/MisterGlasses/Quantumult/master/QuantumultX/Re
 https://raw.githubusercontent.com/Tartarus2014/For-own-use/master/Loon/Plugin/Block/Bilibili.plugin#replace=(.*reject$)@$1-dict, tag=Bilibili去广告, update-interval=172800, opt-parser=true, enabled=true
 
 # 知乎助手_去广告及体验增强
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.quanx#replace=(.*reject$)@$1-dict, tag=知乎助手_去广告及体验增强, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.qxrewrite#replace=(.*reject$)@$1-dict, tag=知乎助手_去广告及体验增强, update-interval=172800, opt-parser=true, enabled=true
 
 # 漫画人去广告
 https://raw.githubusercontent.com/Tartarus2014/For-own-use/master/Loon/Plugin/Manhuaren.plugin#replace=(.*reject$)@$1-dict, tag=漫画人去广告, update-interval=172800, opt-parser=true, enabled=true
