--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -24,6 +24,8 @@ https:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://raw.gi
 #打开 APP 手动签到一次: 访问下右下角 `我` > `签到` (头像下面)
 # 190及以后版本
 ^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js
+# 中国电信金豆兑换话费 cookie 获取
+^https:\/\/wapside.189.cn:9001\/api\/exchange\/consume url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js
 
 # 中国联通 获取cookie
 #打开 APP , 进入签到页面, 系统提示: `获取刷新链接: 成功`,然后手动签到 1 次
@@ -51,4 +53,4 @@ https?:\/\/task\.jegotrip\.com\.cn\:8080\/app\/tasks\?userid url script-response
 
 # 喜马拉雅极速版Cookie
 #APP登陆账号后，点击右下角'福利'选项,即可获取Cookie.获取成功后，去代理软件的日志里面寻找 ’喜马拉雅极速版cookie‘
-https:\/\/m\.ximalaya\.com\/speed\/task-center\/account\/coin url script-request-header https://raw.githubusercontent.com/lxk0301/scripts/master/backUp/xmly_speed_ccokie.js
+https:\/\/m\.ximalaya\.com\/speed\/task-center\/account\/coin url script-request-header https://raw.githubusercontent.com/lxk0301/jd_scripts/master/backUp/xmly_speed_ccokie.js
