--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -53,4 +53,4 @@ https?:\/\/task\.jegotrip\.com\.cn\:8080\/app\/tasks\?userid url script-response
 
 # 喜马拉雅极速版Cookie
 #APP登陆账号后，点击右下角'福利'选项,即可获取Cookie.获取成功后，去代理软件的日志里面寻找 ’喜马拉雅极速版cookie‘
-https:\/\/m\.ximalaya\.com\/speed\/task-center\/account\/coin url script-request-header https://raw.githubusercontent.com/lxk0301/jd_scripts/master/backUp/xmly_speed_ccokie.js
+https:\/\/m\.ximalaya\.com\/speed\/task-center\/account\/coin url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/backUp/xmly_speed_ccokie.js
