--- a/QuantumultX/MrGlasses.conf
+++ b/QuantumultX/MrGlasses.conf
@@ -212,6 +212,14 @@ server=/*.xiaomi.com/119.29.29.29
 
 [policy]
 #以下为策略组[policy]部分
+static=无忧行, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/CMI.png
+static=解锁网易云音乐, direct, resource-tag-regex=UnblockNeteaseMusic, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
+static=苹果服务, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
+static=微软服务, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Microsoft.png
+static=成人网站, direct, proxy, resource-tag-regex=MPDF, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Pornhub.png
+static=国外影视, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/ForeignMedia.png
+static=国外网站, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Global.png
+static=终极清单, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
 
 # 静态策略（static）指向您手动选择的候选服务器。
 ;static=policy-name-1, Sample-A, Sample-B, Sample-C, img-url=http://example.com/icon.png
