增加LXK0301重定向

--- a/QuantumultX/Rewrite/Redirect.conf
+++ b/QuantumultX/Rewrite/Redirect.conf
@@ -1,4 +1,4 @@
-hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com
+hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gitee.com
 
 # 去除知乎跳转确认 需放在#知乎更换 UA#前
 ;^https://link\.zhihu\.com/\?target=(https?)?(%3A|:)?(\/\/|%2F%2F)?(.*?)(&source.*)?$ url 307 http://$4
@@ -10,3 +10,12 @@ hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com
 
 # 爱Q生活网跳转到移动版
 ^https?:\/\/(www.)?3k8\.com url 307 https://wap.3k8.com
+
+# 电信5G会员抢购
+^https://mapi\.bestpay\.com\.cn/mapi/redbag/growth/getAwardDetailInfo url response-body "status":".*", response-body "status":"EXCHANGE",
+
+# LXK0301重定向
+# Quantumult X 之前禁止了重写自己发出的请求，可能无效，可开另一软件重写更新其任务
+^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/tree\/ url 302 https://github.com/wangdetao8341/NewCenturyWubi/tree/
+^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/blob\/ url 302 https://github.com/wangdetao8341/NewCenturyWubi/blob/
+^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/raw\/ url 302 https://raw.githubusercontent.com/wangdetao8341/NewCenturyWubi/
