--- a/QuantumultX/MrGlasses.conf
+++ b/QuantumultX/MrGlasses.conf
@@ -61,7 +61,7 @@ dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id
 
 # 禁用系统 DNS
 # 为了提高性能，会使用从当前网络（系统）中获取的 DNS 服务器（您可以使用「no-system」禁用此功能，但至少要增加一个自定义的DNS服务器，如「server=223.5.5.5.5」）。
-no-system
+;no-system
 
 # 禁用 IPv6
 # 当设置「no-ipv6」时，Quanumult X Tunnel 的 DNS 模块会直接让 AAAA 查询失败。
@@ -482,15 +482,8 @@ host, testflight.apple.com, 苹果服务
 host-suffix, xiaoxiaobujidao.org, 国外网站
 host-suffix, feed43.com, 国外网站
 host-suffix, redgifs.com, 国外网站
-
-# 知乎去广告
-;DOMAIN,118.89.204.198,REJECT
-;DOMAIN-SUFFIX,118.89.204.198,REJECT
-;DOMAIN-KEYWORD,118.89.204.198,REJECT
-;IP-CIDR,118.89.204.198/32,REJECT
-;USER-AGENT,AVOS*,REJECT
-;DOMAIN-SUFFIX,appcloud2.zhihu.com,REJECT
-;DOMAIN-SUFFIX,appcloud2.in.zhihu.com,REJECT
+host, jdsharedresourcescdn.azureedge.net, proxy
+host, docs.rsshub.com, 国外网站
 
 #迅雷版权问题
 host, hub5idx.v6.shub.sandai.net, reject
