--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -1,7 +1,7 @@
 #Cookie获取订阅
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
-hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, e.189.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn, m.ximalaya.com
+hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn, m.ximalaya.com
 
 # 京东签到获取cookie
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
@@ -36,10 +36,6 @@ https:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://raw.gi
 # "我的"-"设置"-"登陆设置"中关闭指纹登陆，打开自动登录，登陆以后关后台重进，才能保证获取到ck
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
-
-# 中国电信套餐 (By @uchvk & @Macsuny)
-#下载安装 天翼账号中心 登录
-^https?:\/\/e\.189\.cn\/store\/user\/package_detail\.do url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/telecomInfinity.js
 
 # 无忧行 (by @vinewx)
 #获取Cookie说明：「 分为五部分: AccountID | UserID | Mobile | Token | TaskID 」
