--- a/QuantumultX/Rewrite/Get_Cookie.conf
+++ b/QuantumultX/Rewrite/Get_Cookie.conf
@@ -1,7 +1,7 @@
 #Cookie获取订阅
 #Cookie获取成功后在重写里禁用掉本订阅
 #Cookie失效时在重写里启用本订阅
-hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn, m.ximalaya.com
+hostname = api.m.jd.com, iface?.iqiyi.com, c.tieba.baidu.com, www.52pojie.cn, wapside.189.cn, act.10010.com, m.client.10010.com, clientaccess.10086.cn, e.189.cn, app*.jegotrip.com.cn, task.jegotrip.com.cn, m.ximalaya.com, apph5.manmanbuy.com
 
 # 京东签到获取cookie
 #浏览器登录 https://bean.m.jd.com 点击签到并且出现签到日历
@@ -37,6 +37,10 @@ https:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://raw.gi
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
 ^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js
 
+# 中国电信套餐 (By @uchvk & @Macsuny)
+#下载安装 天翼账号中心 登录
+^https?:\/\/e\.189\.cn\/store\/user\/package_detail\.do url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/telecomInfinity.js
+
 # 无忧行 (by @vinewx)
 #获取Cookie说明：「 分为五部分: AccountID | UserID | Mobile | Token | TaskID 」
 ;1.打开无忧行App, 通知成功写入「 AccountID | UserID | Mobile | Token 」.
@@ -48,3 +52,6 @@ https?:\/\/task\.jegotrip\.com\.cn\:8080\/app\/tasks\?userid url script-response
 # 喜马拉雅极速版Cookie
 #APP登陆账号后，点击右下角'福利'选项,即可获取Cookie.获取成功后，去代理软件的日志里面寻找 ’喜马拉雅极速版cookie‘
 https:\/\/m\.ximalaya\.com\/speed\/task-center\/account\/coin url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/backUp/xmly_speed_ccokie.js
+
+# 慢慢买每日自动签到
+https?:\/\/apph5\.manmanbuy\.com\/taolijin\/(login.aspx|logserver.aspx) url script-request-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/manmanbuy/manmanbuy_checkin.js
