增加注销京东店铺会员

--- a/QuantumultX/Rewrite/Redirect.conf
+++ b/QuantumultX/Rewrite/Redirect.conf
@@ -1,4 +1,4 @@
-hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gitee.com
+hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gitee.com, shopmember.m.jd.com
 
 # 去除知乎跳转确认 需放在#知乎更换 UA#前
 ;^https://link\.zhihu\.com/\?target=(https?)?(%3A|:)?(\/\/|%2F%2F)?(.*?)(&source.*)?$ url 307 http://$4
@@ -19,3 +19,6 @@ hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gite
 ^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/tree\/ url 302 https://github.com/wangdetao8341/My-Actions/tree/dev
 ^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/blob\/ url 302 https://github.com/wangdetao8341/My-Actions/blob/dev/
 ^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/raw\/ url 302 https://raw.githubusercontent.com/wangdetao8341/My-Actions/dev/
+
+# 注销京东店铺会员
+^(https://shopmember.m.jd.com/member/membersRule\?(?!.*sign=member.*)) url 302 $1sign=member&
