规则冲突 待解决
知乎更换 UA与blackmatrix7/ios_rule_script中的知乎助手有冲突

--- a/QuantumultX/Rewrite/ChangeUA.conf
+++ b/QuantumultX/Rewrite/ChangeUA.conf
@@ -5,7 +5,8 @@ hostname = *.baidu.com, *.bdimg.com, www.zhihu.com, *.sm.cn
 ^https?:\/\/jump2\.bdimg\.com\/(?>f|p) url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
 # 知乎更换 UA 需放在#去除知乎跳转确认#后
-^https?:\/\/www\.zhihu\.com url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
+#此规则与blackmatrix7/ios_rule_script中的知乎助手有冲突
+;^https?:\/\/www\.zhihu\.com url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
 # 夸克更换 UA
 ^https?:\/\/quark\.sm\.cn url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Quark/4.3.2.1082 Mobile$2
