--- a/QuantumultX/Filter/BlockiOSServices.conf
+++ b/QuantumultX/Filter/BlockiOSServices.conf
@@ -1,19 +1,77 @@
 # Block iOS Update
+HOST,appldnld.apple.com,REJECT
+HOST,appldnld.apple.com.akadns.net,REJECT
+HOST,appldnld-lb.apple.com.akadns.net,REJECT
+HOST,appldnld.g.aaplimg.com,REJECT
+HOST,appldnld.apple.com.mwcname.com,REJECT
+HOST,appldnld-cdn.apple.com.akadns.net,REJECT
+HOST,appldnld-cdn.origin-apple.com.akadns.net,REJECT
+#
 HOST,gdmf.apple.com,REJECT
 HOST,gdmf.apple.com.akadns.net,REJECT
-HOST,xp.apple.com,REJECT
-HOST,swscan.apple.com,REJECT
+HOST,gdmf-lb.apple.com.akadns.net,REJECT
+HOST,gdmf.g.aaplimg.com,REJECT
+HOST,gdmf.apple.com.mwcname.com,REJECT
+HOST,gdmf-cdn.apple.com.akadns.net,REJECT
+HOST,gdmf-cdn.origin-apple.com.akadns.net,REJECT
+#
+HOST,gg.apple.com,REJECT
+HOST,gg.apple.com.akadns.net,REJECT
+HOST,gg-lb.apple.com.akadns.net,REJECT
+HOST,gg.g.aaplimg.com,REJECT
+HOST,gg.apple.com.mwcname.com,REJECT
+HOST,gg-cdn.apple.com.akadns.net,REJECT
+HOST,gg-cdn.origin-apple.com.akadns.net,REJECT
+#
+HOST,iphonesubmissions.apple.com,REJECT
+HOST,iphonesubmissions.apple.com.akadns.net,REJECT
+HOST,iphonesubmissions-lb.apple.com.akadns.net,REJECT
+HOST,iphonesubmissions.g.aaplimg.com,REJECT
+HOST,iphonesubmissions.apple.com.mwcname.com,REJECT
+HOST,iphonesubmissions-cdn.apple.com.akadns.net,REJECT
+HOST,iphonesubmissions-cdn.origin-apple.com.akadns.net,REJECT
+#
 HOST,mesu.apple.com,REJECT
+HOST,mesu.apple.com.akadns.net,REJECT
+HOST,mesu-lb.apple.com.akadns.net,REJECT
+HOST,mesu.g.aaplimg.com,REJECT
 HOST,mesu.apple.com.mwcname.com,REJECT
 HOST,mesu-cdn.apple.com.akadns.net,REJECT
 HOST,mesu-cdn.origin-apple.com.akadns.net,REJECT
-HOST,mesu.g.aaplimg.com,REJECT
+#
 HOST,ns.itunes.apple.com,REJECT
-HOST,appldnld.apple.com,REJECT
-HOST,appldnld.apple.com.akadns.net,REJECT
+#
 HOST,ocsp.apple.com,REJECT
-HOST,iphonesubmissions.apple.com,REJECT
+HOST,ocsp.apple.com.akadns.net,REJECT
+HOST,ocsp-lb.apple.com.akadns.net,REJECT
+HOST,ocsp.g.aaplimg.com,REJECT
+HOST,ocsp.apple.com.mwcname.com,REJECT
+HOST,ocsp-cdn.apple.com.akadns.net,REJECT
+HOST,ocsp-cdn.origin-apple.com.akadns.net,REJECT
+#
 HOST,radarsubmissions.apple.com,REJECT
-HOST,gg.apple.com,REJECT
+HOST,radarsubmissions.apple.com.akadns.net,REJECT
+HOST,radarsubmissions-lb.apple.com.akadns.net,REJECT
+HOST,radarsubmissions.g.aaplimg.com,REJECT
+HOST,radarsubmissions.apple.com.mwcname.com,REJECT
+HOST,radarsubmissions-cdn.apple.com.akadns.net,REJECT
+HOST,radarsubmissions-cdn.origin-apple.com.akadns.net,REJECT
+#
+HOST,swscan.apple.com,REJECT
+HOST,swscan.apple.com.akadns.net,REJECT
+HOST,swscan-lb.apple.com.akadns.net,REJECT
+HOST,swscan.g.aaplimg.com,REJECT
+HOST,swscan.apple.com.mwcname.com,REJECT
+HOST,swscan-cdn.apple.com.akadns.net,REJECT
+HOST,swscan-cdn.origin-apple.com.akadns.net,REJECT
+#
 HOST,updates-http.cdn-apple.com,REJECT
 HOST,updates.cdn-apple.com,REJECT
+#
+HOST,xp.apple.com,REJECT
+HOST,xp.apple.com.akadns.net,REJECT
+HOST,xp-lb.apple.com.akadns.net,REJECT
+HOST,xp.g.aaplimg.com,REJECT
+HOST,xp.apple.com.mwcname.com,REJECT
+HOST,xp-cdn.apple.com.akadns.net,REJECT
+HOST,xp-cdn.origin-apple.com.akadns.net,REJECT
