--- a/QuantumultX/Rewrite/Q-Search.conf
+++ b/QuantumultX/Rewrite/Q-Search.conf
@@ -1,8 +1,8 @@
-# From (https://raw.githubusercontent.com/Neurogram-R/Surge/master/module/Q-Search.sgmodule)
+# From (https://raw.githubusercontent.com/zZPiglet/Task/master/Q-Search.conf)
 # Safari 内输入 命令 + 空格 + 关键词 快速指定搜索引擎搜索
-# 注：先进入设置更改 Safari 默认搜索为 DuckDuckGO
-# 注：若非要用 Alook 浏览器使用该脚本，先进行更改：Alook - 设置 - 搜索引擎 - 默认搜索引擎 - DuckDuckGo。其余浏览器同理。
-# Mr.Glasses 自用，可提建议，但不一定会加入。建议自行修改使用，或使用 nzw9314 的合集（https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Q-Search_All_in_one.conf）
+# 注：先进入设置更改 Safari 默认搜索为 百度
+# 注：若非要用 Alook 浏览器使用该脚本，先进行更改：Alook - 设置 - 搜索引擎 - 默认搜索引擎 - 百度。其余浏览器同理。
+# 此脚本由zZPiglet指导并修改，仅自用。
 
 hostname = www.baidu.com, m.baidu.com
 
