尝试解决知乎APP加载失败问题
QuantumultX中MMIT若存在www.zhihu.com，似乎会导致知乎APP偶尔加载失败的问题。

--- a/QuantumultX/Rewrite/ChangeUA.conf
+++ b/QuantumultX/Rewrite/ChangeUA.conf
@@ -1,4 +1,4 @@
-hostname = *.baidu.com, *.bdimg.com, www.zhihu.com, *.sm.cn
+hostname = *.baidu.com, *.bdimg.com, *.sm.cn
 
 # 百度更换 UA
 ^https?:\/\/(?!d\.pcs).*(?<!map)\.baidu\.com url request-header (\r\n)User-Agent: Mozilla.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
