--- a/QuantumultX/Rewrite/Redirect.conf
+++ b/QuantumultX/Rewrite/Redirect.conf
@@ -2,8 +2,8 @@ hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gite
 
 # 去除知乎跳转确认 需放在#知乎更换 UA#前
 ;^https://link\.zhihu\.com/\?target=(https?)?(%3A|:)?(\/\/|%2F%2F)?(.*?)(&source.*)?$ url 307 http://$4
-^https:\/\/link\.zhihu\.com.*?target=(https?)(%3A|:)(\/\/|%2F%2F)(.+?)((&|%26)source.*)?$ url 307 $1://$4
-^https:\/\/link\.zhihu\.com.*?target=(www\.)(.+?)((&|%26)source.*)?$ url 307 http://www.$2
+;^https:\/\/link\.zhihu\.com.*?target=(https?)(%3A|:)(\/\/|%2F%2F)(.+?)((&|%26)source.*)?$ url 307 $1://$4
+;^https:\/\/link\.zhihu\.com.*?target=(www\.)(.+?)((&|%26)source.*)?$ url 307 http://www.$2
 
 # 知乎专栏底部推荐阅读文章直接打开（屏蔽跳转应用商店）
 ^https:\/\/oia\.zhihu\.com url 307 https://zhuanlan.zhihu.com
@@ -16,9 +16,9 @@ hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gite
 
 # LXK0301重定向
 # Quantumult X 之前禁止了重写自己发出的请求，可能无效，可开另一软件重写更新其任务
-^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/tree\/ url 302 https://github.com/wangdetao8341/My-Actions/tree/dev
-^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/blob\/ url 302 https://github.com/wangdetao8341/My-Actions/blob/dev/
-^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/raw\/ url 302 https://raw.githubusercontent.com/wangdetao8341/My-Actions/dev/
+;^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/tree\/ url 302 https://github.com/wangdetao8341/My-Actions/tree/dev
+;^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/blob\/ url 302 https://github.com/wangdetao8341/My-Actions/blob/dev/
+;^https:\/\/gitee\.com\/lxk0301\/jd_scripts\/raw\/ url 302 https://raw.githubusercontent.com/wangdetao8341/My-Actions/dev/
 
 # 注销京东店铺会员
 ^(https://shopmember.m.jd.com/member/membersRule\?(?!.*sign=member.*)) url 302 $1sign=member&
