屏蔽一汽丰田更新弹窗

--- a/QuantumultX/Rewrite/Startup.conf
+++ b/QuantumultX/Rewrite/Startup.conf
@@ -30,6 +30,7 @@ hostname = wmapi.meituan.com, api.m.jd.com, ms.jr.jd.com, dss0.bdstatic.com, ad.
 ^https?:\/\/superapp\.ftms\.com\.cn\/superapp\/carStore url reject-dict
 ^https?:\/\/superapp\.ftms\.com\.cn\/superapp\/lifeMall url reject-dict
 ^https?:\/\/superapp\.ftms\.com\.cn\/superapp\/member\/wt\/pointsTasks url reject-dict
+^https?:\/\/ app\.ftms\.com\.cn\/V2\/index\/appversion url reject-dict
 
 # 小熊油耗
 ^https?:\/\/www\.xiaoxiongyouhao\.com\/api\/app_ad.php url reject-dict
