--- a/QuantumultX/Rewrite/FakeVIP.conf
+++ b/QuantumultX/Rewrite/FakeVIP.conf
@@ -56,3 +56,6 @@ https:\/\/asia-east2-slidebox-ios-prod\.cloudfunctions\.net\/api_v1 url script-r
 
 # WPS (By eHpo)
 ^https://account.wps.cn/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
+
+# Notability解锁订阅
+^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js
