--- a/QuantumultX/Rewrite/Redirect.conf
+++ b/QuantumultX/Rewrite/Redirect.conf
@@ -1,4 +1,4 @@
-hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gitee.com, shopmember.m.jd.com
+hostname = link.zhihu.com, oia.zhihu.com, mapi.bestpay.com.cn, gitee.com, shopmember.m.jd.com
 
 # 去除知乎跳转确认 需放在#知乎更换 UA#前
 ;^https://link\.zhihu\.com/\?target=(https?)?(%3A|:)?(\/\/|%2F%2F)?(.*?)(&source.*)?$ url 307 http://$4
@@ -7,9 +7,6 @@ hostname = link.zhihu.com, oia.zhihu.com, www.3k8.com, mapi.bestpay.com.cn, gite
 
 # 知乎专栏底部推荐阅读文章直接打开（屏蔽跳转应用商店）
 ^https:\/\/oia\.zhihu\.com url 307 https://zhuanlan.zhihu.com
-
-# 爱Q生活网跳转到移动版
-^https?:\/\/(www.)?3k8\.com url 307 https://wap.3k8.com
 
 # 电信5G会员抢购
 ^https://mapi\.bestpay\.com\.cn/mapi/redbag/growth/getAwardDetailInfo url response-body "status":".*", response-body "status":"EXCHANGE",
