--- a/QuantumultX/Rewrite/FakeVIP.conf
+++ b/QuantumultX/Rewrite/FakeVIP.conf
@@ -40,10 +40,7 @@ https://license.pdfexpert.com/api/2.0/scanner/subscription/refresh url script-re
 ^https:\/\/api\.flexibits\.com\/v1\/(auth|account)\/(device|details|appstore-receipt)\/$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/fantastical.js
 
 # Slidebox (By otherbanana)
-https:\/\/asia-east2-slidebox-ios-prod\.cloudfunctions\.net\/api_v1 url script-response-body https://raw.githubusercontent.com/otherbanana/Script/master/QuantumultX/Files-JS/Slidebox.js
-
-# 轻芒破解（20200927 By otherbanana）
-^https:\/\/api\.qingmang\.me\/v2\/user\.app\.queryMembership\.* url script-response-body https://raw.githubusercontent.com/otherbanana/Script/master/QuantumultX/Files-JS/qingmang.js
+https:\/\/asia-east2-slidebox-ios-prod\.cloudfunctions\.net\/api_v1 -url script-response-body https://raw.githubusercontent.com/otherbanana/QuantumultX/main/File-js/slidebox.js
 
 # 白描 (By id77)
 ^https:\/\/baimiao\.uzero\.cn\/api\/v2\.user\/(logout|appLaunchWithUser|loginByWeixin) url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/baimiao.js
